# link-c-lib-in-haskell

./: .gitignore  LICENSE  README.md
c/: Makefile  liba.c  liba.h  libb.c  libb.h  main.c
haskell/: LICENSE  haskell.cabal
haskell/src/: LibAb.hs  Main.hs
