name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Rolf Schröder
maintainer:          rolf.schr@gmail.com
copyright:           2017 Rolf Schröder
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell
  hs-source-dirs:      src
--  ghc-options:         -L../c -lab
  extra-lib-dirs:      ../c
  extra-libraries:     ab
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     LibAb
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
